# realtimeplot

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile.in  INSTALL  README  README.md  Rakefile  TODO  autotest.sh  common_commands
doc/cairo_plot/: Doxyfile
doc/realtimeplot/: Doxyfile
examples/: plot_heightmap.cc  plot_histogram.cc  plot_line.cc  plot_multiple.cc  plot_points.cc  plot_points_actor.cc  plot_points_aspect_ratio.cc  plot_race.cc  plot_rolling_update_stress_test.cc  plot_rolling_updates.cc  plot_squares.cc  plot_stream.cc  plot_surface.cc  plot_test.cc  plot_thread.cc  plot_transparent_points.cc  proof_of_concept.cc  rolling_update.cc  rolling_update_stress_test.cc  rolling_updates.cc  ruby_example.rb  test_cairo.cc  xcb.cc  xcb_base.cc
ext/: convert_events_to_cppa.rb  extconf.rb  rb_cairo_plot.cc  rb_realtimeplot.cc  rb_realtimeplot.rb  rbpp_cairo_plot.rb
ext/utils/: custom_from_to_ruby.cc  custom_from_to_ruby.h
include/: cairo_plot.h
include/cairo_plot/: eventhandler.h  plot.h
include/cairomm/: xcb_surface.h
include/realtimeplot/: actor.hh  adaptive.h  backend.h  delaunay.h  eventhandler.h  events.h  helper_functions.h  plot.h  plotarea.h  realtimeplot.h  thread_queue.h  utils.h  xcb_eventhandler.h  xcbhandler.h
src/: cairo_plot.cc
src/cairo_plot/: eventhandler.cc  plot.cc
src/cairomm/: xcb_surface.cc
src/realtimeplot/: actor.cc  adaptive.cc  backend.cc  delaunay.cc  eventhandler.cc  events.cc  plot.cc  plotarea.cc  utils.cc  xcbhandler.cc
tests/: test_actor.h  test_adaptive.h  test_backend.h  test_backend_with_cairo.h  test_delaunay.h  test_eventhandler.h  test_eventhandler_mock.h  test_plot.h  test_plotarea.h  test_thread_queue.h  test_utils.h  test_xcb_eventhandler.h  test_xcbhandler.h  testhelpers.h  turtlemock.h
